tests/snapshots/blockflow/rich_block/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - blockflow
    - rich-block
    - foo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: path parameter block_hash (Invalid hex string: foo: foo)
