tests/snapshots/blockflow/rich_block/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - rich-block
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <BLOCK_HASH>

Usage: kermit blockflow rich-block <BLOCK_HASH>

For more information, try '--help'.
